# libgaril

./: .travis.yml  Makefile.am  configure.ac  garil.pc.in  glib-tap.mk  travis.sh
docs/reference/: Makefile.am  garil-docs.xml  version.xml.in
garil/: garil.h  garilclient.c  garilclient.h  garilconnection.c  garilconnection.h  garilenumtypes.c.template  garilenumtypes.h.template  garilparcel.c  garilparcel.h  garilversion.c  garilversion.h.in  version.h.in
tests/: test-connection.c  test-parcel.c
